added vtb api
